Small fix - format of img

--- a/base.html
+++ b/base.html
@@ -135,7 +135,7 @@
       <h3>Лучшие студенты школы</h3>
       <div>
         <div class="student-card">
-          <img src="{{ url_for('static', path='/student1.png') }}">
+          <img src="{{ url_for('static', path='/student1.jpg') }}">
         </div>
         <div class="student-card">
           <img src="{{ url_for('static', path='/student2.png') }}">
