--- a/base.html
+++ b/base.html
@@ -36,7 +36,7 @@
     </section>
 
     <header>
-      <img class="logo" src="{{ url_for('static', path='/logo.png') }}">
+      <div class="logo-main"></div>
       <button id="menu-toggle" class="button-img"><img src="{{ url_for('static', path='/mobile_menu_btn.png') }}" alt="Menu"></button>
       <nav class="menu">
         <a href="#top-decor">О школе</a>
