--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <header>
-        <img class="logo" src="res/logo.png">
+        <div class="logo-main"></div>
         <button id="menu-toggle" class="button-img"><img src="res/mobile_menu_btn.png" alt="Menu"></button>
         <nav class="menu">
             <a href="#top-decor">О школе</a>
