refactor class names

--- a/index.html
+++ b/index.html
@@ -62,32 +62,30 @@
     </section>
 
     <section class="about-section">
-        <div class="about-content">
-            <div id="top-decor"></div>
-            <div class="flex-section">
-                <div class="left">
-                    <h2>Добро пожаловать в мир школы программирования Kodama</h2>
-                    <p>
-                        Добро пожаловать в Kodama - онлайн-школу программирования, где мы создаем будущее вместе! Мы
-                        предлагаем вам уникальную возможность погрузиться в увлекательный мир кодирования и создания
-                        программ. Наши курсы разработаны для того, чтобы помочь вам освоить различные языки
-                        программирования, научиться создавать веб-сайты, игры и многое другое.
+        <div class="top-decor"></div>
+        <div class="about-container">
+            <div class="left">
+                <h2>Добро пожаловать в мир школы программирования Kodama</h2>
+                <p>
+                    Добро пожаловать в Kodama - онлайн-школу программирования, где мы создаем будущее вместе! Мы
+                    предлагаем вам уникальную возможность погрузиться в увлекательный мир кодирования и создания
+                    программ. Наши курсы разработаны для того, чтобы помочь вам освоить различные языки
+                    программирования, научиться создавать веб-сайты, игры и многое другое.
 
-                        У нас вы найдете опытных преподавателей, готовых поддержать вас на каждом шагу вашего обучения.
-                        Мы предлагаем гибкий график занятий, чтобы вы могли учиться в удобное для вас время, а также
-                        возможность работать над реальными проектами, что поможет вам применить полученные навыки на
-                        практике.
+                    У нас вы найдете опытных преподавателей, готовых поддержать вас на каждом шагу вашего обучения.
+                    Мы предлагаем гибкий график занятий, чтобы вы могли учиться в удобное для вас время, а также
+                    возможность работать над реальными проектами, что поможет вам применить полученные навыки на
+                    практике.
 
-                        Присоединяйтесь к нашему сообществу и станьте частью новой волны программистов, готовых изменить
-                        мир с помощью технологий!
-                    </p>
-                </div>
-                <div class="right">
-                    <img src="res/right_image_about.png">
-                </div>
+                    Присоединяйтесь к нашему сообществу и станьте частью новой волны программистов, готовых изменить
+                    мир с помощью технологий!
+                </p>
             </div>
-            <div id="bottom-decor"></div>
+            <div class="right">
+                <img src="res/right_image_about.png">
+            </div>
         </div>
+        <div class="bottom-decor"></div>
     </section>
 
     <div id="between-decor-purple">
@@ -96,7 +94,7 @@
 
     <section class="courses-section" id="courses">
         <div class="courses-content">
-            <div id="top-decor"></div>
+            <div class="top-decor"></div>
             <div class="two-clouds" id="two-clouds-top"></div>
             <div class="two-clouds" id="two-clouds-bottom"></div>
             <div class="cloud" id="cloud-right-top"></div>
