refactor: path to image in css instead html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <header>
         <a href="#top-site" id="logo-link">
-            <img class="logo" src="res/logo.png">
+            <div class="logo"></div>
         </a>
         <button id="menu-toggle" class="button-img"><img src="res/mobile_menu_btn.png" alt="Menu"></button>
         <nav class="menu">
