fix path to phoro for students section in css

--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
         <h3>Лучшие студенты школы</h3>
         <div>
             <div class="student-card">
-                <img src="res/student1.jpg">
+                <div class="student-card-photo student1"></div>
             </div>
             <div class="student-card">
-                <img src="res/student2.png">
+                <div class="student-card-photo student2"></div>
             </div>
             <div class="student-card">
-                <img src="res/student3.jpg">
+                <div class="student-card-photo student3"></div>
             </div>
             <div class="student-card">
-                <img src="res/student4.jpg">
+                <div class="student-card-photo student4"></div>
             </div>
         </div>
     </section>
