fix nav btn about school

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </a>
         <button id="menu-toggle" class="button-img"><img src="res/mobile_menu_btn.png" alt="Menu"></button>
         <nav class="menu">
-            <a href="#top-decor">О школе</a>
+            <a href="#about-section">О школе</a>
             <a href="#courses">Курсы</a>
             <a href="#questions-section">Отзывы</a>
             <a href="#submit-app-section">Контакты</a>
@@ -61,7 +61,7 @@
         </nav>
     </section>
 
-    <section class="about-section">
+    <section id="about-section">
         <div class="top-decor"></div>
         <div class="about-container">
             <div class="left">
