configure docker and googlesheet

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         </a>
         <button id="menu-toggle" class="button-img"><img src="res/mobile_menu_btn.png" alt="Menu"></button>
         <nav class="menu">
-            <a href="#about-section">О школе</a>
-            <a href="#courses">Курсы</a>
-            <a href="#questions-section">Отзывы</a>
-            <a href="#submit-app-section">Контакты</a>
+            <a class="menu-item" href="#about-section">О школе</a>
+            <a class="menu-item" href="#courses-section">Курсы</a>
+            <a class="menu-item" href="#questions-section">Отзывы</a>
+            <a class="menu-item" href="#submit-app-section">Контакты</a>
         </nav>
     </header>
 
@@ -92,7 +92,7 @@
         <h3>Знания, приключения и веселье: выбери свой путь</h3>
     </div>
 
-    <section class="courses-section" id="courses">
+    <section id="courses-section">
         <div class="courses-content">
             <div class="top-decor"></div>
             <div class="two-clouds" id="two-clouds-top"></div>
@@ -152,7 +152,7 @@
         </div>
     </section>
 
-    <section class="guide-school-section">
+    <section id="guide-school-section">
         <div class="square" id="square1" data-speed="3"></div>
         <div class="square" id="square2" data-speed="2"></div>
         <div class="square" id="square3" data-speed="3"></div>
