refactor, fix path to js script (was duplicate), replace menu btns

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Kodama</title>
-    <script src="script.js" defer></script>
 </head>
 
 <body id="top-site">
@@ -15,7 +14,7 @@
         <a href="#top-site" id="logo-link">
             <div class="logo"></div>
         </a>
-        <button id="menu-toggle" class="button-img"><img src="res/mobile_menu_btn.png" alt="Menu"></button>
+        <button id="open-menu-btn"></button>
         <nav class="menu">
             <a class="menu-item" href="#about-section">О школе</a>
             <a class="menu-item" href="#courses-section">Курсы</a>
@@ -52,7 +51,7 @@
     </section>
 
     <section id="mobile-menu">
-        <button id="close-menu-btn" class="button-img"><img src="res/exit_btn.png" alt="Close Menu"></button>
+        <button id="close-menu-btn"></button>
         <nav id="nav-mobile-menu">
             <a href="#top-decor">О школе</a>
             <a href="#courses">Курсы</a>
