upgrade mobile menu

--- a/index.html
+++ b/index.html
@@ -52,11 +52,26 @@
 
     <section id="mobile-menu">
         <button id="close-menu-btn"></button>
+        <a href="#top-site" id="mobile-logo-link">
+            <div class="mobile-logo"></div>
+        </a>
         <nav id="nav-mobile-menu">
-            <a href="#top-decor">О школе</a>
-            <a href="#courses">Курсы</a>
-            <a href="#questions-section">Отзывы</a>
-            <a href="#submit-app-section">Контакты</a>
+            <a class="mobile-menu-item" href="#about-section">
+                <img class="mobile-menu-icon" src="res/about_icon.png">
+                О школе
+            </a>
+            <a class="mobile-menu-item" href="#courses-section">
+                <img class="mobile-menu-icon" src="res/courses_icon.png">
+                Курсы
+            </a>
+            <a class="mobile-menu-item" href="#questions-section">
+                <img class="mobile-menu-icon" src="res/feedbacks_icon.png">
+                Отзывы
+            </a>
+            <a class="mobile-menu-item" href="#submit-app-section">
+                <img class="mobile-menu-icon" src="res/contacts_icon.png">
+                Контакты
+            </a>
         </nav>
     </section>
 
