fix courses height, change decor - now its no repeat

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </section>
 
     <section id="about-section">
-        <div class="top-decor"></div>
+        <div class="top-decor-about"></div>
         <div class="about-container">
             <div class="left">
                 <h2>Добро пожаловать в мир школы программирования Kodama</h2>
@@ -99,7 +99,7 @@
                 <img src="res/right_image_about.png">
             </div>
         </div>
-        <div class="bottom-decor"></div>
+        <div class="bottom-decor-about"></div>
     </section>
 
     <div id="between-decor-purple">
@@ -108,7 +108,7 @@
 
     <section id="courses-section">
         <div class="courses-content">
-            <div class="top-decor"></div>
+            <div class="top-decor-courses"></div>
             <div class="two-clouds" id="two-clouds-top"></div>
             <div class="two-clouds" id="two-clouds-bottom"></div>
             <div class="cloud" id="cloud-right-top"></div>
@@ -198,7 +198,7 @@
     </section>
 
     <section id="questions-section">
-        <div id="top-decor-without-bubbles"></div>
+        <div id="top-decor-faq"></div>
         <div class="bubble" style="left: 10%; animation-duration: 10s;"></div>
         <div class="bubble" style="left: 30%; animation-duration: 8s;"></div>
         <div class="bubble" style="left: 50%; animation-duration: 12s;"></div>
