update submit section

--- a/index.html
+++ b/index.html
@@ -294,13 +294,17 @@
                 </div>
             </div>
         </div>
+        
+        <div class="bottom-decor-faq-bg"></div>
+        <div class="bottom-decor-faq-bg-transparent"></div>
+        <div class="bottom-decor-faq"></div>
     </section>
 
     <section id="submit-app-section">
         <div id="submit-app-content">
             <img id="submit-app-photo" src="res/request_photo.jpg">
             <div id="submit-app-form">
-                <h2>Оставьте заявку</h2>
+                <h3>Запишитесь на первый урок</h3>
                 <input type="text" placeholder="Ваше имя">
                 <input type="tel" placeholder="Ваш телефон">
                 <input type="email" placeholder="Ваша почта">
