make start section adaptive

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </h1>
             <img id="main-btn" src="res/start_red_btn.png">
 
-            <div class="container" id="select-course">
-                <a href="#courses-section">
+            <div id="select-course">
+                <a href="#courses-section" id="select-course-btn-link">
                     <img id="select-course-btn" src="res/select_course_btn.png">
                 </a>
             </div>
