fix students an faq sections on mobile

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     <section id="students-section">
         <h3>Лучшие студенты школы</h3>
-        <div>
+        <div id="students-container">
             <div class="student-card">
                 <div class="student-card-photo student1"></div>
             </div>
@@ -252,9 +252,9 @@
                 </div>
 
                 <div class="faq-right">
-
                     <div class="faq faq-item" onclick="toggleAnswer('faq-answer4')">Какие навыки мой ребенок приобретет?
                     </div>
+
                     <div class="faq faq-answer" id="faq-answer4">
                         Ваш ребенок приобретет навыки программирования, создания игр, работу с компьютерными
                         программами, а также улучшит логическое мышление, творческий потенциал и умение работать в
@@ -288,6 +288,7 @@
 
                     <div class="faq faq-item" onclick="toggleAnswer('faq-answer6')">Сколько времени длится занятие?
                     </div>
+                    
                     <div class="faq faq-answer" id="faq-answer6">
                         В нашей школе каждое занятие продолжается 55 минут.
                     </div>
