--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
     <title>Kodama</title>
+    <link rel="icon" type="image/png" href="res/favicon.ico">
 </head>
 
 <body id="top-site">
