footer email link refactor

--- a/index.html
+++ b/index.html
@@ -322,11 +322,10 @@
         </div>
     </section>
 
-
     <footer>
         <p>&copy; 2024 Kodama. Все права защищены.</p>
-        <p>Свяжитесь с нами: <a href="kodama.edu@gmail.com">kodama.edu@gmail.com</a></p>
-    </footer>
+        <p>Свяжитесь с нами: <a href="mailto:kodama.edu@gmail.com">kodama.edu@gmail.com</a></p>
+    </footer>    
 
     <script src="script.js" defer></script>
 </body>
