--- a/main.html
+++ b/main.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('root', path='/style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('root', path='/mobile.css') }}" media="screen and (max-width: 768px)">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/mobile.css') }}" media="screen and (max-width: 768px)">
     <title>Kodama</title>
     <link rel="icon" type="image/png" href="res/favicon.ico">
 </head>
@@ -12,6 +12,24 @@
     {% include "templates/header.html" %}
 
     {% include "templates/start_section.html" %}
+
+    {% include "templates/mobile_menu.html" %}
+
+    {% include "templates/about_section.html" %}
+
+    {% include "templates/between_decor_purple.html" %}
+
+    {% include "templates/courses_section.html" %}
+
+    {% include "templates/students_section.html" %}
+
+    {% include "templates/guide_school_section.html" %}
+
+    {% include "templates/questions_section.html" %}
+
+    {% include "templates/submit_app_section.html" %}
+
+    {% include "templates/footer.html" %}
 
     <script src="{{ url_for('root', path='/script.js') }}" defer></script>
 </body>
